--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_talco"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_talco_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.David_Fernandez_Suco_PMDM_Tarea1"
         tools:targetApi="31">
+        <activity
+            android:name=".Actividad2"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
