--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- añadir permisos de internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,10 @@
         android:theme="@style/Theme.David_Fernandez_Suco_PMDM_Tarea1"
         tools:targetApi="31">
         <activity
-            android:name=".Actividad2"
+            android:name=".CrearAlarma"
+            android:exported="false" />
+        <activity
+            android:name=".LoginCorrecto"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
