--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <!-- añadir permisos de internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- añadir permisos de despertador -->
+    <application-permision android:name="com.android.alarm.permission.SET_ALARM" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
