--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     <!-- añadir permisos de internet -->
     <uses-permission android:name="android.permission.INTERNET" />
-
     <!-- añadir permisos de despertador -->
-    <application-permision android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.David_Fernandez_Suco_PMDM_Tarea1"
         tools:targetApi="31">
+        <activity
+            android:name=".ModificarCredenciales"
+            android:exported="false" />
         <activity
             android:name=".CrearAlarma"
             android:exported="false" />
